# real_estate_helm

./: .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/: README.md
apps/android/: package.json
apps/windows/: package.json
docs/: deployment.md  implementation-status.md  release.md
schema/: postgres.sql
src/real_estate_helm/: __init__.py  __main__.py  adapters.py  analytics.py  api.py  auth_api.py  backup.py  cash_flow_import.py  cli.py  collaboration.py  crm_import.py  data_room.py  domain.py  email_import.py  enrichment.py  export_controls.py  exports.py  extraction.py  fastapi_app.py  intake.py  monitoring.py  notifications.py  (+16 more)
tests/: test_analytics_monitoring_reporting.py  test_api.py  test_auth_api.py  test_backup.py  test_cash_flow_import.py  test_cli.py  test_client_scaffolds.py  test_collaboration.py  test_crm_import.py  test_data_room.py  test_deployment_packaging.py  test_document_ai.py  test_domain.py  test_email_import.py  test_enrichment.py  test_export_controls.py  test_exports.py  test_extraction.py  test_fastapi_app.py  test_http_adapters.py  test_intake.py  test_notifications.py  test_obligation_import.py  test_portfolio_qa.py  test_postgres.py  test_postgres_runtime.py  test_repository.py  test_scenarios.py  test_schema.py  test_schemas.py  test_serialization.py  test_server.py  test_services.py  test_settings.py  test_source_health.py  test_storage.py  test_tasks.py  test_underwriting.py  test_workflows.py
web/: app.js  index.html  styles.css
(+10 files in other folders)
