[project]
name = "real-estate-helm"
version = "0.1.0"
description = "Core domain model for a real-estate deal intelligence system."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
