[project]
name = "real-estate-helm"
version = "0.1.0"
description = "Core domain model for a real-estate deal intelligence system."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
real-estate-helm = "real_estate_helm.cli:main"
real-estate-helm-server = "real_estate_helm.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
